STREET-4723: new version of the api - fixed issues around list of objects

--- a/StreetSmartAPI/StreetSmart.WPF.Example/MainWindow.xaml
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/MainWindow.xaml
@@ -31,7 +31,7 @@
   </Window.DataContext>
   <StackPanel>
     <streetSmart:StreetSmartGUI Height="350"
-      Api="{Binding Api, Mode=OneWay}" />
+      WpfApi="{Binding WpfApi, Mode=OneWay}" />
     <StackPanel>
       <Grid>
         <Grid.ColumnDefinitions>
