--- a/StreetSmartAPI/StreetSmart.WPF.Example/App.xaml
+++ b/StreetSmartAPI/StreetSmart.WPF.Example/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="StreetSmart.WPF.Example.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Startup="OnStartup">
     <!--
  /*
  * Street Smart .NET integration
